--- a/Miniso/Venetian.html
+++ b/Miniso/Venetian.html
@@ -2288,7 +2288,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Encuentra en nuestras tiendas las mejores ofertas, para complacer y complacer a quienes amas: juguetes, accesorios, ropa, tecnología y ¡mucho más!</div>
+<div id="i12">Encuentra en nuestras tiendas las mejores ofertas, para sorprender y complacer a quienes amas: juguetes, accesorios, ropa, tecnología y ¡mucho más!</div>
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">¿Buscando qué regalar en esta Navidad?</div>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2474,7 +2474,7 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: Encuentra en nuestras tiendas las mejores ofertas, para complacer y complacer a quienes amas: juguetes, accesorios, ropa, tecnología y ¡mucho más!; customName: false;
+name: Encuentra en nuestras tiendas las mejores ofertas, para sorprender y complacer a quienes amas: juguetes, accesorios, ropa, tecnología y ¡mucho más!; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
