--- a/Miniso2/Venetian2.html
+++ b/Miniso2/Venetian2.html
@@ -2152,11 +2152,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 61px; height: 66px;
-        -ms-transform: translate(0, 0) translate(256px, 409px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(256px, 409px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(256px, 409px) rotate(0deg);
-        transform: translate(0, 0) translate(256px, 409px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 52px; height: 56px;
+        -ms-transform: translate(0, 0) translate(265px, 416px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(265px, 416px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(265px, 416px) rotate(0deg);
+        transform: translate(0, 0) translate(265px, 416px) rotate(0deg);
 }
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
 #i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 250px;
@@ -2255,41 +2255,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(1px, 0px) rotate(0deg);
 }
-/*#/#*//*#i32.image.css:image/base/css*/
-#i32 { opacity: 1; }
-/*#/#*//*#i32.i33.positioning.css:positioning/base/css.2*/
-#i32 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 51px; height: 51px;
-        -ms-transform: translate(0, 0) translate(16px, 255px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 255px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 255px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 255px) rotate(0deg);
+/*#/#*//*#i48.image.css:image/base/css*/
+#i48 { opacity: 1; }
+/*#/#*//*#i48.i49.positioning.css:positioning/base/css.2*/
+#i48 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 45px; height: 45px;
+        -ms-transform: translate(0, 0) translate(16px, 305px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 305px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 305px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 305px) rotate(0deg);
 }
-/*#/#*//*#i34.image.css:image/base/css*/
-#i34 { opacity: 1; }
-/*#/#*//*#i34.i35.positioning.css:positioning/base/css.2*/
-#i34 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 51px; height: 50px;
-        -ms-transform: translate(0, 0) translate(16px, 310px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 310px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 310px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 310px) rotate(0deg);
-}
-/*#/#*//*#i36.image.css:image/base/css*/
-#i36 { opacity: 1; }
-/*#/#*//*#i36.i37.positioning.css:positioning/base/css.2*/
-#i36 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 51px; height: 50px;
-        -ms-transform: translate(0, 0) translate(16px, 368px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 368px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 368px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 368px) rotate(0deg);
-}
-/*#/#*//*#i38.image.css:image/base/css*/
-#i38 { opacity: 1; }
-/*#/#*//*#i38.i39.positioning.css:positioning/base/css.2*/
-#i38 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 51px; height: 50px;
-        -ms-transform: translate(0, 0) translate(16px, 424px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 424px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 424px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 424px) rotate(0deg);
+/*#/#*//*#i52.image.css:image/base/css*/
+#i52 { opacity: 1; }
+/*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
+#i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 45px; height: 45px;
+        -ms-transform: translate(0, 0) translate(16px, 362px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 362px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 362px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 362px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2318,14 +2300,10 @@ y ¡mucho más!</div>
 <div id="i40"></div>
 <!--#/#--><!--#i26.button.html:button/html-->
 <button id="i26"></button>
-<!--#/#--><!--#i32.image.html:image/html-->
-<img id="i32" src="https://i.imgur.com/p6NH8YO.png"/>
-<!--#/#--><!--#i34.image.html:image/html-->
-<img id="i34" src="https://i.imgur.com/MOosxdR.png"/>
-<!--#/#--><!--#i36.image.html:image/html-->
-<img id="i36" src="https://i.imgur.com/JIkrNB5.png"/>
-<!--#/#--><!--#i38.image.html:image/html-->
-<img id="i38" src="https://i.imgur.com/WvdmJ4O.png"/>
+<!--#/#--><!--#i48.image.html:image/html-->
+<img id="i48" src="https://i.imgur.com/p6NH8YO.png"/>
+<!--#/#--><!--#i52.image.html:image/html-->
+<img id="i52" src="https://i.imgur.com/NnJxPrs.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2382,6 +2360,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
+/*#/#*//*#i40.i41.positioning.js:positioning/base/js.2*/
+bmShow('i40');
 /*#/#*//*#i26.i27.positioning.js:positioning/base/js.2*/
 bmShow('i26');
 /*#/#*//*#i26.i28.actions.js:actions/base/js.1*/
@@ -2397,16 +2377,16 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i32.image.js:image/base/js*/
+/*#/#*//*#i48.image.js:image/base/js*/
 
-/*#/#*//*#i32.i33.positioning.js:positioning/base/js.2*/
-bmShow('i32');
-/*#/#*//*#i32.i48.actions.js:actions/base/js.1*/
+/*#/#*//*#i48.i49.positioning.js:positioning/base/js.2*/
+bmShow('i48');
+/*#/#*//*#i48.i50.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i32');
+var el = document.getElementById('i48');
 
 el.addEventListener('click', function(e){
-    /*#i48.i49.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://goo.gl/maps/yPCyrGgk9ep'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -2414,59 +2394,23 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i34.image.js:image/base/js*/
+/*#/#*//*#i52.image.js:image/base/js*/
 
-/*#/#*//*#i34.i35.positioning.js:positioning/base/js.2*/
-bmShow('i34');
-/*#/#*//*#i34.i42.actions.js:actions/base/js.1*/
+/*#/#*//*#i52.i53.positioning.js:positioning/base/js.2*/
+bmShow('i52');
+/*#/#*//*#i52.i54.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i34');
+var el = document.getElementById('i52');
 
 el.addEventListener('click', function(e){
-    /*#i42.i43.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://miniso.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i54.i55.actions-callNumber.js:actions-callNumber/base/js.1*/
+    window.open('tel:58446789');
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i36.image.js:image/base/js*/
-
-/*#/#*//*#i36.i37.positioning.js:positioning/base/js.2*/
-bmShow('i36');
-/*#/#*//*#i36.i44.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i36');
-
-el.addEventListener('click', function(e){
-    /*#i44.i45.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://miniso.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i38.image.js:image/base/js*/
-
-/*#/#*//*#i38.i39.positioning.js:positioning/base/js.2*/
-bmShow('i38');
-/*#/#*//*#i38.i46.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i38');
-
-el.addEventListener('click', function(e){
-    /*#i46.i47.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://miniso.com.mx/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i40.i41.positioning.js:positioning/base/js.2*/
-bmShow('i40');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2517,24 +2461,14 @@ name: ;
 customName: false;
 /*#/#*//*#i26.i27.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i32.image.meta:image/meta*/
+/*#/#*//*#i48.image.meta:image/meta*/
 name: p6NH8YO.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
-/*#/#*//*#i32.i33.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i48.i49.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i34.image.meta:image/meta*/
-name: MOosxdR.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i52.image.meta:image/meta*/
+name: NnJxPrs.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
-/*#/#*//*#i34.i35.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i36.image.meta:image/meta*/
-name: JIkrNB5.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i36.i37.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i38.image.meta:image/meta*/
-name: WvdmJ4O.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i38.i39.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i52.i53.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
