--- a/Miniso2/Venetian2.html
+++ b/Miniso2/Venetian2.html
@@ -2282,7 +2282,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">¿Buscando qué regalar en esta Navidad?</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Encuentra en nuestras tiendas las mejores ofertas, para sorprender y complacer a quienes amas: juguetes, accesorios, ropa, tecnología 
+<div id="i12">Ven y encuentra en nuestras tiendas las mejores ofertas, para sorprender y complacer a quienes amas: juguetes, accesorios, ropa, tecnología 
 y ¡mucho más!</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/Doq2CQA.png"/>
