--- a/MaryKay/Cube.html
+++ b/MaryKay/Cube.html
@@ -888,7 +888,8 @@ document.getElementById('i91').addEventListener('click', function(e){
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-#i5.i58.image.js:image/base/js*/
+
+/*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
