--- a/BCP/FIJO.html
+++ b/BCP/FIJO.html
@@ -234,8 +234,8 @@
               
                 <div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
                     <div class="bzm_text">
-                         <span class="bzm_text_title  bzm_text_bold" style="color: #0632a1;line-height:1.1; font-size:30px; text-align: center; margin-left:0px; margin-right:0px;">
-						¡Por abrir tu Cuenta de Ahorros ya no necesitas esperar!
+                         <span class="bzm_text_title  bzm_text_bold" style="color: #0632a1;line-height:1.1; font-size:28px; text-align: center; margin-left:0px; margin-right:0px;">
+						¡Para abrir tu Cuenta de Ahorros ya no necesitas esperar!
 						</span> <br>
                         <span class="bzm_text_medium" style="color:#0632a1; line-height:1.2em; font-size:26px; width:90%; text-align:center;">
                         <p style="margin-top: 12px; line-height: 1.2em; margin-left: 0px; ">
