--- a/BCP/fijo-gif.html
+++ b/BCP/fijo-gif.html
@@ -228,7 +228,7 @@
                 <div style="margin-top:12px; margin-left: 10px; margin-right: 10px;">
                     <div class="bzm_text">
                         <span class="bzm_text_title  bzm_text_bold" style="float:center; color:#0632a1;line-height:1.1; font-size:20px;">
-						   ¡Por abrir tu Cuenta de Ahorros ya no necesitas esperar!
+						   ¡Para abrir tu Cuenta de Ahorros ya no necesitas esperar!
 						</span>
                        
                      
