--- a/BCP/Venetian.html
+++ b/BCP/Venetian.html
@@ -2244,7 +2244,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">¡Por  abrir  tu  Cuenta  de  Ahorros  ya  no  necesitas  esperar!</div>
+<div id="i12">¡Para  abrir  tu  Cuenta  de  Ahorros  ya  no  necesitas  esperar!</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
