--- a/Corona DEC/Cube.html
+++ b/Corona DEC/Cube.html
@@ -900,7 +900,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Tus abuelos tomaban cerveza Corona y tú la tomarás con tus nietos...está en el ADN de México</div>
+<div id="i24">Tus abuelos tomaban cerveza Corona y tú la tomarás con tus nietos...está en el ADN de México.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/o9AhfJO.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -920,7 +920,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Lo más fino nunca se detiene</div>
+<div id="i34">Lo más fino nunca se detiene.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/pVo8tAn.pngv"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
