--- a/Enfemenino Editorial/index.html
+++ b/Enfemenino Editorial/index.html
@@ -41,9 +41,9 @@
 
 Pero ha habido muchos más: <b>Michael Fassbender y Kate Winslet por 'Steve Jobs' </b> (ambos están irreconocibles) o <b>Bryan Cranston por interpretar al (menos conocido) guionista Donald Trumbo. </b> No podemos dejar de mencionar a otros como Joseph Gordon-Levitt (que este año ha hecho doblete de biopics) o Johnny Depp, que se metió en la piel de un conocidísimo delincuente estadounidense. <br> <br>
 
-Otro ejemplo digno de destacar es <b>la película Marie Curie, la actriz polaca Karolina Gruszka </b> se metió en el papel de la científica y compatriota en el camino a su segundo Premio Nobel. La pérdida de su marido en un accidente de tráfico y el enfrentarse a la vida sola con dos hijas hacen que Curie se centre en sus estudios científicos, un mundo dominado en la época por los hombres. Pero <b> consigue dos importantes aliados, nada más y nada menos que Albert Einstein y Paul Langevin, </b>amigo de su marido. Un filme de la cineasta Marie Noëlle que recomendamos sumes a tu lista de biopics. <br> <br></p>
+</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="#" class="button big">Leer más</a></li>
 										</ul>
 									</div>
 									<span class="image object">
@@ -120,7 +120,7 @@ Otro ejemplo digno de destacar es <b>la película Marie Curie, la actriz polaca 
 											<h3>Las 3 claves para saber cómo decorar las mesas de vuestra boda</h3>
 											<p>Todo es importante en el día de vuestra boda, desde los pequeños detalles de la decoración y las flores, la música, la organización en la ceremonia y en la celebración, hasta la presentación de la mesa.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">Más</a></li>
 											</ul>
 										</article>
 										<article>
@@ -128,7 +128,7 @@ Otro ejemplo digno de destacar es <b>la película Marie Curie, la actriz polaca 
 											<h3>¿Cómo elegir una buena cafetera?</h3>
 											<p>El café es esencial en nuestro día a día, nos ayuda a despejarnos y hacer un break en nuestra rutina en la oficina y nos sirve como excusa perfecta para sentarse con amigas y tener una charla de esas que te dejan como nueva.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">Más</a></li>
 											</ul>
 										</article>
 										<article>
@@ -136,7 +136,7 @@ Otro ejemplo digno de destacar es <b>la película Marie Curie, la actriz polaca 
 											<h3>¡Bienvenida, Navidad! Los mejores estilos de decoración para tu hogar</h3>
 											<p>Es hora crear un ambiente navideño con los mejores accesorios de decoración. Aquí encontrarás los que mejor se adaptan al estilo de tu pequeño hogar.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">Más</a></li>
 											</ul>
 										</article>
 										<article>
@@ -144,7 +144,7 @@ Otro ejemplo digno de destacar es <b>la película Marie Curie, la actriz polaca 
 											<h3>Las agendas más chulas con las que empezar 2019 pisando fuerte</h3>
 											<p>Empieza la cuenta atrás para 2019, volvemos a llenar nuestra mente con los propósitos de año nuevo y hacemos inventario de las cosas que tenemos que mejorar.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">Más</a></li>
 											</ul>
 										</article>
 									</div>
