--- a/Enfemenino Editorial/index.html
+++ b/Enfemenino Editorial/index.html
@@ -20,6 +20,9 @@
 								<header id="header">
 									<div><a href="index.html" class="logo" src="https://i.imgur.com/Q4hrrT4.png" alt=""style="height:30px;text-align: left; float:left"></a></div>
 									<ul class="icons">
+										<li><a href="index.html" class="logo" src="https://i.imgur.com/Q4hrrT4.png" alt=""style="height:30px;text-align: left; float:left"><span class="label"></span></a></li>
+
+
 
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -104,7 +107,7 @@ Pero ha habido muchos más: <b>Michael Fassbender y Kate Winslet por 'Steve Jobs
 											<h3>Una boda en navidad ¿Te atreves?</h3>
 											<p>¿Buscas una boda original? Cásate en Navidad, te lo recomendamos totalmente, cada vez más bodas se hacen durante estas fechas año tras año. Vuestra día será de lo más especial y sobre todo podrá ser una boda muy mágica.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">Más</a></li>
 											</ul>
 										</article>
 										<article>
@@ -112,7 +115,7 @@ Pero ha habido muchos más: <b>Michael Fassbender y Kate Winslet por 'Steve Jobs
 											<h3>Sabemos dónde hacen el mejor roscón de Reyes de Madrid</h3>
 											<p>No hay duda de que los roscones de Reyes son uno de esos dulces a los que no podemos resistirnos cuando llegan estas fechas tan especiales.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="#" class="button">Más</a></li>
 											</ul>
 										</article>
 										<article>
