--- a/Formatos ADS/hover text/MAP FINAL/hover-text-big.html
+++ b/Formatos ADS/hover text/MAP FINAL/hover-text-big.html
@@ -23,10 +23,11 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 300px;
-    height: 600px;
+    width: 298px;
+    height: 598px;
     background: none;
     overflow: hidden;
+    border: 1px solid #c5c5c5
 }
 
 #ghost{
@@ -34,9 +35,10 @@
     margin-top: 250px;
     margin-left: 36px;
     z-index: 999;
-    width: 228px;
-    height: 200px;
+    width: 298px;
+    height: 598px;
     cursor: pointer;
+    display: none;
     }
 
 
@@ -118,7 +120,7 @@
         <script>
             $(document).ready(function(){
 
-                $('#ghost').click(function(){
+                $('.card').click(function(){
                     $('.details').css({'top':'0', 'left': '0px'});
                 })
 
