--- a/Formatos ADS/hover text/MAP FINAL/hover-text-big.html
+++ b/Formatos ADS/hover text/MAP FINAL/hover-text-big.html
@@ -27,7 +27,8 @@
     height: 598px;
     background: none;
     overflow: hidden;
-    border: 1px solid #c5c5c5
+    border: 1px solid #c5c5c5;
+    cursor: pointer;
 }
 
 #ghost{
