--- a/Formatos ADS/hover text/MAP FINAL/hover-text-big2.html
+++ b/Formatos ADS/hover text/MAP FINAL/hover-text-big2.html
@@ -100,13 +100,13 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/XMeN7nU.jpg">
+                <img src="https://i.imgur.com/JX9OzTG.jpg">
             </div>
 
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px;">
-                <a href="https://goo.gl/maps/AeAhWGV4zJH2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/SBcqZJE.jpg"> </a></div>
+                <a href="https://goo.gl/maps/AeAhWGV4zJH2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/VNlKK24.jpg"> </a></div>
 
              
 
