--- a/Formatos ADS/hover text/MAP FINAL/hover-text-big.html
+++ b/Formatos ADS/hover text/MAP FINAL/hover-text-big.html
@@ -103,13 +103,13 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/XMeN7nU.jpg">
+                <img src="https://i.imgur.com/JX9OzTG.jpg">
             </div>
 
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px;">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15904.17823437411!2d-74.0463165!3d4.762252!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7e1314c3e84e41a2!2sCentro+Comercial+Santaf%C3%A9!5e0!3m2!1ses!2sco!4v1544548302739" width="300" height="600" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+                <iframe src="https://goo.gl/maps/AeAhWGV4zJH2" width="300" height="600" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 
              
 
