--- a/Formatos ADS/hover text/MAP FINAL/hover-text-big2.html
+++ b/Formatos ADS/hover text/MAP FINAL/hover-text-big2.html
@@ -27,6 +27,8 @@
     height: 600px;
     background: none;
     overflow: hidden;
+    cursor: pointer;
+    border: 1px solid #c5c5c5;
 }
 
 #ghost{
@@ -37,6 +39,7 @@
     width: 228px;
     height: 200px;
     cursor: pointer;
+     display: none;
     }
 
 
@@ -105,7 +108,7 @@
 
 
             <div class="details">
-                <div style="margin-left: -30px; margin-top:-60px;">
+                <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
                 <a href="https://goo.gl/maps/AeAhWGV4zJH2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/VNlKK24.jpg"> </a></div>
 
              
@@ -118,7 +121,7 @@
         <script>
             $(document).ready(function(){
 
-                $('#ghost').click(function(){
+                $('.card').click(function(){
                     $('.details').css({'top':'0', 'left': '0px'});
                 })
 
