--- a/Tamales Costeña/Cube.html
+++ b/Tamales Costeña/Cube.html
@@ -508,7 +508,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 21px; color: #bf0808; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 51px;
         -ms-transform: translate(-50%, -50%) translate(0px, 84px) rotate(0deg);
@@ -534,12 +534,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(221px, 212px) rotate(0deg);
         transform: translate(0, 0) translate(221px, 212px) rotate(0deg);
 }
-/*#/#*//*#i4.i182.button.css:button/base/css*/
-#i182 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(48,29,25,1); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(94,22,7,1); border-width: 1px; margin:-1px; border-style: solid; }
-#i182:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-#i182:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
-/*#/#*//*#i182.i183.positioning.css:positioning/base/css.2*/
-#i182 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 150px; height: 30px;
+/*#/#*//*#i4.i216.button.css:button/base/css*/
+#i216 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(227,9,48,1); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(227,9,48,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i216:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i216:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+/*#/#*//*#i216.i217.positioning.css:positioning/base/css.2*/
+#i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 150px; height: 30px;
         -ms-transform: translate(0, 0) translate(75px, 147px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(75px, 147px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(75px, 147px) rotate(0deg);
@@ -735,7 +735,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, -7px) rotate(0deg);
 }
 /*#/#*//*#i5.i202.button.css:button/base/css*/
-#i202 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(48,29,25,1); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(94,22,7,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i202 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(227,9,48,1); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(227,9,48,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i202:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i202:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i202.i203.positioning.css:positioning/base/css.2*/
@@ -755,7 +755,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(221px, 212px) rotate(0deg);
 }
 /*#/#*//*#i5.i188.text.css:text/base/css*/
-#i188 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 21px; color: #bf0808; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i188 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i188.i189.positioning.css:positioning/base/css.1*/
 #i188 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 273px; height: 51px;
         -ms-transform: translate(-50%, -50%) translate(0px, 81px) rotate(0deg);
@@ -829,16 +829,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i130" src="https://i.imgur.com/GzyU5m2.png"/>
 <!--#/#--><!--#i4.i179.image.html:image/html-->
 <img id="i179" src="https://i.imgur.com/0XTvpCI.png"/>
-<!--#/#--><!--#i4.i182.button.html:button/html-->
-<button id="i182">¿Te gustan los tamales?</button>
+<!--#/#--><!--#i4.i216.button.html:button/html-->
+<button id="i216">¿Te gustan los tamales?</button>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i190.image.html:image/html-->
-<img id="i190" src="https://i.imgur.com/Q5LX6xl.png"/>
+<img id="i190" src="https://i.imgur.com/6XHRAxT.png"/>
 <!--#/#--><!--#i4.i192.image.html:image/html-->
-<img id="i192" src="https://i.imgur.com/5q57kv8.png"/>
+<img id="i192" src="https://i.imgur.com/X8j8gMO.png"/>
 <!--#/#--><!--#i4.i194.image.html:image/html-->
-<img id="i194" src="https://i.imgur.com/h9SM1HK.png"/>
+<img id="i194" src="https://i.imgur.com/ODDYMlN.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i5.cube-panel.html:cube-panel/html-->
@@ -856,11 +856,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i196.image.html:image/html-->
-<img id="i196" src="https://i.imgur.com/Q5LX6xl.png"/>
+<img id="i196" src="https://i.imgur.com/6XHRAxT.png"/>
 <!--#/#--><!--#i5.i198.image.html:image/html-->
-<img id="i198" src="https://i.imgur.com/5q57kv8.png"/>
+<img id="i198" src="https://i.imgur.com/X8j8gMO.png"/>
 <!--#/#--><!--#i5.i200.image.html:image/html-->
-<img id="i200" src="https://i.imgur.com/h9SM1HK.png"/>
+<img id="i200" src="https://i.imgur.com/ODDYMlN.png"/>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -906,8 +906,6 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 
 /*#/#*//*#i179.i180.positioning.js:positioning/base/js.2*/
 bmShow('i179');
-/*#/#*//*#i182.i183.positioning.js:positioning/base/js.2*/
-bmShow('i182');
 /*#/#*//*#i91.i177.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
@@ -966,6 +964,8 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i216.i217.positioning.js:positioning/base/js.2*/
+bmShow('i216');
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1083,27 +1083,27 @@ name: 0XTvpCI.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i179.i180.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i182.button.meta:button/meta*/
-name: ¿Te gustan los tamales?;
+/*#/#*//*#i4.i216.button.meta:button/meta*/
+name: ¿Te gustan los tamales? copy;
 customName: false;
-/*#/#*//*#i182.i183.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i216.i217.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i4.i190.image.meta:image/meta*/
-name: Q5LX6xl.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 6XHRAxT.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i190.i191.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i192.image.meta:image/meta*/
-name: 5q57kv8.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: X8j8gMO.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i192.i193.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i194.image.meta:image/meta*/
-name: h9SM1HK.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: ODDYMlN.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i194.i195.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1137,17 +1137,17 @@ name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i196.image.meta:image/meta*/
-name: Q5LX6xl.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 6XHRAxT.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i196.i197.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i198.image.meta:image/meta*/
-name: 5q57kv8.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: X8j8gMO.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i198.i199.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i200.image.meta:image/meta*/
-name: h9SM1HK.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: ODDYMlN.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i200.i201.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
