--- a/Tamales Costeña/Venetian.html
+++ b/Tamales Costeña/Venetian.html
@@ -2226,7 +2226,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i14.button.css:button/base/css*/
-#i14 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(48,29,25,1); font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 18px; border-color: rgba(48,29,25,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i14 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(227,9,48,1); font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 18px; border-color: rgba(227,9,48,1); border-width: 1px; margin:-1px; border-style: solid; }
 #i14:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 #i14:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.2*/
@@ -2310,11 +2310,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i32.text.html:text/html-->
 <div id="i32">Entonces esta receta de cazuela de tamales al horno te será muy útil.</div>
 <!--#/#--><!--#i34.image.html:image/html-->
-<img id="i34" src="https://i.imgur.com/Q5LX6xl.png"/>
+<img id="i34" src="https://i.imgur.com/6XHRAxT.png"/>
 <!--#/#--><!--#i38.image.html:image/html-->
-<img id="i38" src="https://i.imgur.com/5q57kv8.png"/>
+<img id="i38" src="https://i.imgur.com/X8j8gMO.png"/>
 <!--#/#--><!--#i42.image.html:image/html-->
-<img id="i42" src="https://i.imgur.com/h9SM1HK.png"/>
+<img id="i42" src="https://i.imgur.com/ODDYMlN.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2491,17 +2491,17 @@ name: Entonces esta receta de cazuela de tamales al horno te será muy útil.; c
 /*#/#*//*#i32.i33.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i34.image.meta:image/meta*/
-name: Q5LX6xl.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 6XHRAxT.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i34.i35.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i38.image.meta:image/meta*/
-name: 5q57kv8.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: X8j8gMO.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i38.i39.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i42.image.meta:image/meta*/
-name: h9SM1HK.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: ODDYMlN.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
