--- a/Tamales Costeña/Video2.html
+++ b/Tamales Costeña/Video2.html
@@ -193,7 +193,7 @@
             z-index: 2;
             margin-left: 38%;
             left: -30px;
-            background-color: #301d19;
+            background-color: #db0032;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
